src/objects/CD_GMT_Product_Category_Defaults__c.object
<CustomObject>
    <fields>
        <fullName>CD_GMT_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD GMT Category</label>
        <referenceTo>CD_GMT_Category__c</referenceTo>
        <relationshipLabel>CD GMT Product Category Defaults</relationshipLabel>
        <relationshipName>CD_GMT_Product_Category_Defaults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_GM_SubCategory1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD GM SubCategory1</label>
        <referenceTo>CD_GMT_Subcategory_1__c</referenceTo>
        <relationshipLabel>CD GMT Product Category Defaults</relationshipLabel>
        <relationshipName>CD_GMT_Product_Category_Defaults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_GM_SubCategory2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD_GM SubCategory2</label>
        <referenceTo>CD_GMT_Subcategory_2__c</referenceTo>
        <relationshipLabel>CD GMT Product Category Defaults</relationshipLabel>
        <relationshipName>CD_GMT_Product_Category_Defaults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_GM_SubCategory3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD_GM SubCategory3</label>
        <referenceTo>CD_GMT_Subcategory_3__c</referenceTo>
        <relationshipLabel>CD GMT Product Category Defaults</relationshipLabel>
        <relationshipName>CD_GMT_Product_Category_Defaults</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CD GMT Product Category Defaults</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CD_GMT_Category__c</columns>
        <columns>CD_GM_SubCategory1__c</columns>
        <columns>CD_GM_SubCategory2__c</columns>
        <columns>CD_GM_SubCategory3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CD GMT Category  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD GMT Product Category Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>